--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 supplementary-tests/
 tests/
 alina.zip
-parse.php
-scanner.php
 test.php
 src/parse_nastia.php
 is_it_ok.sh
 jexamxml.jar
 options
+docs/diagram.png
+docs/documentation-parser.docx
